tests/parser/parse-attribute.5.bad.error
error: Malformed repr :native attribute
  --> test:4:14
   |
 4 |  (repr :native)
   |               ^ expected a lisp type
